Added react-hot-loader template and restarting everything..

--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
-    <link href="css/animate.css" rel="stylesheet" type="text/css">
-    <title>Local Weather</title>
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="node_modules/jquery.min.js"></script>
-    <script src="node_modules/browser.min.js"></script>
-    <script src="node_modules/react.js"></script>
-    <script src="node_modules/react-dom.js"></script>
-</head>
-<body>
-<script src="js/app.jsx" type="text/babel"></script>
-<div id="data-root">
-
-</div>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <title>Weather App</title>
+  </head>
+  <body>
+    <div id='root'>
+    </div>
+    <script src="/static/bundle.js"></script>
+  </body>
 </html>
