Redesigned. 4th Time. Works now..

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Weather App</title>
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/animate.css" rel="stylesheet" type="text/css" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id='root'>
+    <div id='root' class="root">
     </div>
     <script src="/static/bundle.js"></script>
   </body>
